@@ -4,6 +4,7 @@ Version 2.01.04 -
   Remove unused -f from pvmove.
   Gulm clvmd doesn't report "connection refused" errors.
   clvmd does a basic config file sanity check at startup.
+  Fix potential thread shutdown race in clvmd.
 
 Version 2.01.03 - 1st February 2005
 ===================================
